fix validation rules

--- a/contact_form/src/scss/style.scss
+++ b/contact_form/src/scss/style.scss
@@ -143,6 +143,11 @@ a {
     max-height: 0;
 }
 
+.contactFormFirst.antispam {
+    height: 0;
+    overflow: hidden;
+}
+
 
 .contact {
     padding: 60px 0;
